added members and improved description

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.4 -->
-<!-- CreationDate: Thu Nov 28 14:45:06 2019 -->
+<!-- CreationDate: Fri Nov 29 10:11:37 2019 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -23,6 +23,7 @@
 <a href="#NAME">NAME</a><br>
 <a href="#DESCRIPTION">DESCRIPTION</a><br>
 <a href="#HISTORY">HISTORY</a><br>
+<a href="#MEMBERS">MEMBERS</a><br>
 
 <hr>
 
@@ -41,24 +42,61 @@
 
 
 <p style="margin-left:11%; margin-top: 1em">eudgrp.ch is
-the Ed User Group Switzerland, the one and only user group
-for the text editor <b>ed(1)</b> in Switzerland.</p>
+the <i>Ed User Group Switzerland</i>, the one and only user
+group for the text editor <b>ed(1)</b> in Switzerland.</p>
 
-<p style="margin-left:11%; margin-top: 1em"><b>ed(1)</b> is
-the standard unix text editor.</p>
+<p style="margin-left:11%; margin-top: 1em">Why should
+anybody still use <b>ed(1)</b> in the twenty-first
+century?</p>
+
+<p style="margin-left:11%; margin-top: 1em"><i>First</i>,
+<b>ed(1)</b> is the standard Unix text editor.</p>
+
+<p style="margin-left:11%; margin-top: 1em"><i>Second</i>,
+if your video terminal breaks down, so that you cannot use
+your fancy screen-based text editor anymore, you can just
+pull out your teletypewriter from the basement, and still
+edit text files using <b>ed(1)</b>.</p>
+
+<p style="margin-left:11%; margin-top: 1em">So if you are a
+<b>nano(1)</b> user, and need to write a letter of complaint
+to your local Computer Science professor for using <i>Comic
+Sans</i> in his <i>PowerPoint</i> slides, or <b>gdb(1)</b>
+inside <i>NetBeans</i>, and all of a sudden your screen
+catches fire, <b>don&rsquo;t come and complain</b>, but get
+your <i>Teletype Model 33</i> from the basement, and use
+<b>ed(1)</b> instead!</p>
 
 <h2>HISTORY
 <a name="HISTORY"></a>
 </h2>
 
 
-<p style="margin-left:11%; margin-top: 1em">The Ed User
-Group Switzerland was founded in November 2019 by two
-reactionary Computer Science students at
-<a href="www.hslu.ch">HSLU</a>. They had too much exposure
-of professors suggesting to use NetBeans instead of
-<b>vim(1),</b> so the students decided to head for the other
-direction instead.</p>
+<p style="margin-left:11%; margin-top: 1em">The <i>Ed User
+Group Switzerland</i> was founded in November 2019 by two
+reactionary Computer Science students at HSLU. They had too
+much exposure to professors suggesting to use
+<i>NetBeans</i> instead of <b>vim(1)</b>, so the students
+decided to head for the other direction, and started to use
+<b>ed(1)</b> instead.</p>
+
+<h2>MEMBERS
+<a name="MEMBERS"></a>
+</h2>
+
+
+<p style="margin-left:11%; margin-top: 1em">Pascal
+Kiser</p>
+
+<p style="margin-left:22%;">Proficient <b>ed(1)</b> user,
+software archeologist, and inspirator. Contact:
+<a href="mailto:pascal.kiser@stud.hslu.ch">pascal.kiser@stud.hslu.ch</a></p>
+
+<p style="margin-left:11%;">Patrick Bucher</p>
+
+<p style="margin-left:22%;">Chief troll, software
+archeologist, and webmaster. Contact:
+<a href="mailto:patrick.bucher@stud.hslu.ch">patrick.bucher@stud.hslu.ch</a></p>
 <hr>
 </body>
 </html>
